--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2",
+    "use-debounce": "^10.0.5",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
